Applications/Scrypted/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: scrypted
  labels:
    reloader.stakater.com/reload: 'enabled' # Enables reloader for this namespace
