Applications/Scrypted/base/resources/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scrypted
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    #reloader.stakater.com/auto: 'true' # Reloads workload when any referenced ConfigMap or Secret changes
    reloader.stakater.com/search: 'true' # Enables search mode (only reloads if matching secrets/configMaps are found)
    #configmap.reloader.stakater.com/auto: 'true' # Reloads only when referenced ConfigMap(s) change
    #configmap.reloader.stakater.com/reload: '' # Reloads when specific ConfigMap(s) change, regardless of how they're used
    #secret.reloader.stakater.com/auto: 'true' # Reloads only when referenced Secret(s) change
    #secret.reloader.stakater.com/reload: '' # Reloads when specific Secret(s) change, regardless of how they're used
    reloader.stakater.com/rollout-strategy: 'rollout' # Specifies the rollout strategy for the workload (rollout (default) / restart)
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: 'application'
  serviceName: scrypted
  replicas: 0
  persistentVolumeClaimRetentionPolicy:
    whenScaled: Retain
    whenDeleted: Retain
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'
      annotations:
        k8s.v1.cni.cncf.io/networks: scrypted/scrypted
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 180
      containers:
        - name: scrypted
          image: ghcr.io/koush/scrypted:v0.0.0-xxx-full
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 0.75
              memory: 2Gi
            limits:
              cpu: 2
              memory: 4Gi
          ports:
            - containerPort: 10080
              protocol: TCP
              name: http
            - containerPort: 10443
              protocol: TCP
              name: https
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: scrypted-pvc
              mountPath: '/server/volume'
      volumes:
        - name: scrypted-ssl-vol
          secret:
            secretName: scrypted-certificate
            defaultMode: 0440
        - name: scrypted-scripts-vol
          configMap:
            name: scrypted-scripts
            defaultMode: 0550
  volumeClaimTemplates:
    - metadata:
        name: scrypted-pvc
        labels:
          app.kubernetes.io/component: 'application'
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn-retain
        resources:
          requests:
            storage: 0Gi
